# nvidia-aqi

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile.vllm  LICENSE-THIRD-PARTY  README.md  pyproject.toml  startup.sh
.github/workflows/: ci.yml
ci/: markdown-link-check-config.json
configs/: config_cli_default.yml  config_frontier_models.yml  config_web_default_llamaindex.yml  config_web_default_llamaindex_brev.yml  config_web_frag.yml  config_web_frag_mcp.yml
deploy/: .env.example
deploy/compose/: docker-compose-brev.yaml  docker-compose.yaml
deploy/helm/: README.md  openshift.md  openshift_overlay_strategy.md
deploy/helm/deployment-k8s/: Chart.yaml  README.md  values-openshift.yaml  values.yaml
deploy/helm/deployment-k8s/charts/: aiq-0.0.4.tgz
deploy/helm/deployment-k8s/stg/: Chart.yaml  values.yaml
deploy/helm/deployment-k8s/stg/charts/: aiq-0.0.4.tgz
deploy/helm/helm-charts-k8s/aiq/: values.yaml
deploy/helm/helm-charts-k8s/aiq/templates/: deployment.yaml  openshift.yaml
docs/notebooks/: 0_Getting_Started_with_AIQ.ipynb  1_Deep_Researcher_Web_Search.ipynb  2_Deep_Researcher_Customization.ipynb
docs/source/customization/: configuration-reference.md  knowledge-layer.md  swapping-models.md
docs/source/deployment/: index.md  kubernetes.md
docs/source/examples/: cli-with-local-nims.md  full-pipeline-llamaindex.md  full-pipeline-web.md
docs/source/get-started/: installation.md
frontends/benchmarks/deepresearch_bench/: README.md  pyproject.toml
frontends/benchmarks/deepresearch_bench/configs/: config_deep_research_bench.yml  config_ensemble.yml
frontends/benchmarks/deepresearch_bench/scripts/: aggregate_drb_scores.py  export_drb_jsonl.py  rewrite_report.py  run_drb_multi_eval_seq.sh
frontends/benchmarks/deepresearch_bench/src/: __init__.py  evaluator.py  register.py
frontends/benchmarks/deepresearch_bench_II/: README.md
frontends/benchmarks/deepresearch_bench_II/configs/: config_workflow_only.yml
frontends/benchmarks/deepresearch_bench_II/scripts/: run_workflow_save_per_item.sh  split_workflow_output_to_per_item.py
frontends/benchmarks/deepsearch_qa/configs/: config_deepsearch_qa.yml
frontends/benchmarks/freshqa/configs/: config_full_workflow.yml
frontends/ui/src/features/chat/: store.spec.ts  store.ts  types.ts
frontends/ui/src/features/chat/components/: AgentPrompt.tsx
frontends/ui/src/features/chat/hooks/: use-chat.spec.ts  use-chat.ts  use-deep-research.spec.ts  use-deep-research.ts  use-load-job-data.ts  use-websocket-chat.spec.ts  use-websocket-chat.ts
frontends/ui/src/features/layout/components/: ExportFooter.spec.tsx  InputArea.spec.tsx  InputArea.tsx
frontends/ui/src/lib/pdf/: ReactPdfDocument.tsx
openshift/deploy/helm/: deploy-openshift.sh  rag-values-openshift.yaml  values-openshift.yaml
openshift/docs/: deploy-openshift.md
scripts/: setup.sh
sources/ensemble_web_search/: pyproject.toml
sources/ensemble_web_search/src/: __init__.py  ensemble_search.py  register.py  you_deep_web_search.py
sources/google_scholar_paper_search/: README.md  pyproject.toml
sources/google_scholar_paper_search/src/: __init__.py  paper_search.py  register.py
sources/tavily_web_search/: pyproject.toml
sources/tavily_web_search/src/: register.py
sources/you_com_web_search/: pyproject.toml
sources/you_com_web_search/src/: __init__.py  register.py
src/aiq_agent/: __init__.py
src/aiq_agent/agents/: __init__.py
src/aiq_agent/agents/deep_researcher/: README.md  agent.py  custom_middleware.py  register.py
src/aiq_agent/agents/deep_researcher/models/: state.py
src/aiq_agent/agents/deep_researcher/planner_agent/: __init__.py  agent.py  register.py
src/aiq_agent/agents/deep_researcher/planner_agent/prompts/: architect.j2  planner_coordinator.j2  scout.j2
src/aiq_agent/agents/deep_researcher/prompts/: orchestrator.j2  planner.j2  researcher.j2
src/aiq_agent/agents/deep_researcher/researcher_agent/: __init__.py  agent.py  register.py
src/aiq_agent/agents/deep_researcher/researcher_agent/prompts/: comparator.j2  critic.j2  evidence_gatherer.j2  generalist.j2  horizon_scanner.j2  mechanism_explorer.j2  researcher_coordinator.j2
src/aiq_agent/agents/ensemble_researcher/: __init__.py  register.py
src/aiq_agent/common/: __init__.py
